make builds run on every push and every PR

--- a/.github/workflows/build-catapault.yml
+++ b/.github/workflows/build-catapault.yml
@@ -1,6 +1,11 @@
 name: Release
 on:
+  pull:
+    paths-ignore:
+      - *.md
   push:
+    paths-ignore:
+      - *.md
     tags:
       - 'v*'
   workflow_dispatch:
