--- a/.github/workflows/build-catapault.yml
+++ b/.github/workflows/build-catapault.yml
@@ -6,8 +6,6 @@ on:
   push:
     paths-ignore:
       - '*.md'
-    tags:
-      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -43,7 +41,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
-          cache: 'npm' # Set this to npm, yarn or pnpm.
+          cache: 'yarn' # Set this to npm, yarn or pnpm.
 
       - name: Install frontend dependencies
         # If you don't have `beforeBuildCommand` configured you may want to build your frontend here too.
