set paths for upload-artifact to get executables

--- a/.github/workflows/build-catapault.yml
+++ b/.github/workflows/build-catapault.yml
@@ -57,3 +57,15 @@ jobs:
           releaseBody: 'See the assets to download and install this version.'
           releaseDraft: true
           prerelease: false
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-${{ matrix.platform }}
+          path: |
+            src-tauri/target/release/bundle/*/*.exe
+            src-tauri/target/release/bundle/**.msi
+            src-tauri/target/release/bundle/*/*.AppImage
+            src-tauri/target/release/bundle/*/*.deb
+            src-tauri/target/release/bundle/*/*.rpm
+            src-tauri/target/release/bundle/*/*.dmg
