--- a/.github/workflows/build-catapault.yml
+++ b/.github/workflows/build-catapault.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Build on every push and every pull-request
 on:
   pull_request:
     paths-ignore:
@@ -14,8 +14,9 @@ jobs:
       contents: write
     strategy:
       fail-fast: false
+      max-parallel: 3
       matrix:
-        platform: [macos-latest, ubuntu-20.04, windows-latest]
+        platform: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -23,7 +24,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
+        if: startsWith(matrix.platform, 'ubuntu')
         # You can remove libayatana-appindicator3-dev if you don't use the system tray feature.
         run: |
           sudo apt-get update
@@ -63,8 +64,8 @@ jobs:
         with:
           name: build-${{ matrix.platform }}
           path: |
-            src-tauri/target/release/bundle/*/*.exe
-            src-tauri/target/release/bundle/**.msi
+            src-tauri/target/release/bundle/nsis/*.exe
+            src-tauri/target/release/bundle/msi/*.msi
             src-tauri/target/release/bundle/*/*.AppImage
             src-tauri/target/release/bundle/*/*.deb
             src-tauri/target/release/bundle/*/*.rpm
